# csv2gpx

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  skills-lock.json  voxcpm.env.example
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/prompts/: plan-voxCpmWyomming.prompt.md
.github/workflows/: ci.yml
src/csv2gpx/: __init__.py  __main__.py  alignment.py  app.py  core.py  video.py
src/csv2gpx/static/: app.js  styles.css
src/csv2gpx/templates/: index.html
src/voxcpm_wyomming/: __init__.py  __main__.py  adapter.py  audio.py  config.py  service.py
tests/: helpers.py  test_adapter.py  test_alignment.py  test_app.py  test_audio.py  test_config.py  test_core.py  test_main.py  test_service.py  test_smoke.py  test_video.py
