[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "csv2gpx"
version = "0.1.0"
description = "Local web app for aligning NMEA/Simrad CSV logs with GoPro video and exporting GPX."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["gpx", "nmea2000", "gopro", "video", "csv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.12",
  "uvicorn>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.0",
  "pre-commit>=4.3.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "httpx>=0.27.0",
  "ruff>=0.13.0"
]

[project.scripts]
csv2gpx-web = "csv2gpx.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "W"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=csv2gpx --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["csv2gpx"]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["src/csv2gpx"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/Dockerfile",
  "/.dockerignore"
]
